--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
   <style>
     * {
@@ -13,8 +13,8 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: white; /* Changed to white */
-      color: black; /* Text black by default */
+      background-color: white;
+      color: black;
       overflow-x: hidden;
       min-height: 100vh;
       display: flex;
@@ -27,15 +27,16 @@
       justify-content: space-between;
       align-items: center;
       padding: 12px 16px;
-      background-color: white; /* White header background */
+      background-color: white;
       border-bottom: 1px solid #ccc;
       transition: opacity 0.4s ease;
-      z-index: 1102; /* keep header on top */
+      z-index: 1102;
       opacity: 1;
       color: black;
+      height: 56px; /* fixed header height */
     }
 
-    /* Icons and text in header black */
+    /* Menu Icon */
     .menu-btn,
     .menu-btn::before,
     .menu-btn::after {
@@ -85,11 +86,12 @@
       top: 0;
     }
 
+    /* Logo container: centered horizontally and vertically aligned */
     .logo-container {
       position: absolute;
       left: 50%;
-      transform: translateX(-50%);
-      top: 7px;
+      top: 50%;
+      transform: translate(-50%, -50%);
       cursor: pointer;
       transition: opacity 0.4s ease;
       z-index: 1103;
@@ -98,14 +100,15 @@
 
     .logo {
       height: 34px;
-      filter: none; /* remove invert */
+      filter: none;
     }
 
+    /* Cart icon container */
     .cart-icon-container {
       position: relative;
       display: flex;
       align-items: center;
-      top: 1px;
+      top: 0;
       z-index: 1103;
       opacity: 1;
       transition: opacity 0.4s ease;
@@ -114,7 +117,7 @@
     .cart-icon {
       height: 22px;
       cursor: pointer;
-      filter: none; /* no invert */
+      filter: none;
     }
 
     .cart-count {
@@ -139,9 +142,8 @@
       left: -100%;
       width: 100vw;
       height: 100vh;
-      background-color: rgba(0, 0, 0, 0.15);
-      backdrop-filter: blur(6px);
-      transition: left 0.5s ease-in-out; /* smoother */
+      background-color: #b0b0b0; /* solid gray */
+      transition: left 0.5s ease-in-out;
       z-index: 1100;
       display: flex;
       justify-content: center;
@@ -157,25 +159,21 @@
 
     /* Image box below header */
     .image-box {
-      flex-grow: 1;
-      max-height: 70vh;
-      width: 90vw;
-      max-width: 1000px;
-      margin: 16px auto 40px auto; /* leaves white space below */
+      width: 100vw;
+      max-width: 100vw;
+      height: calc(70vh); /* around 70% viewport height */
+      margin-top: 72px; /* pushes image down a bit more from header */
       overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-      background: #f9f9f9;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     .image-box img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
-      border-radius: 12px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      user-select: none;
     }
 
     @media (min-width: 768px) {
@@ -188,15 +186,16 @@
 <body>
 
   <header>
-    <!-- Menu Icon (Left) -->
+    <!-- Menu Icon -->
     <div id="menuToggle" class="menu-btn" aria-label="Toggle menu" role="button" tabindex="0"></div>
 
     <!-- Centered Logo -->
     <div id="logo" class="logo-container" tabindex="0" role="link" aria-label="Reload page">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
+      <!-- Black logo version -->
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-black.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     </div>
 
-    <!-- Shopping Bag Icon (Right) -->
+    <!-- Shopping Bag Icon -->
     <div class="cart-icon-container">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
       <div class="cart-count" id="cartCount">0</div>
@@ -224,7 +223,7 @@
     menuToggle.addEventListener('click', () => {
       const isOpen = menuToggle.classList.toggle('open');
       sidebar.classList.toggle('open', isOpen);
-      // Make sure all logos stay visible & clickable on top when sidebar is open
+      // Logos remain visible & clickable on top when sidebar is open
       header.style.opacity = '1';
       logo.style.opacity = '1';
       cartIconContainer.style.opacity = '1';
@@ -232,7 +231,7 @@
       menuToggle.setAttribute('aria-expanded', isOpen);
     });
 
-    // Smooth reload on clicking the logo (fade out then reload)
+    // Smooth reload on clicking the logo
     function smoothReload() {
       header.classList.add('fade-out');
       logo.classList.add('fade-out');
