--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
+
+  <!-- Import Cardo font -->
+  <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
+
   <style>
     * {
       margin: 0;
@@ -13,12 +17,8 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: white;
-      color: black;
-      overflow-x: hidden;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
+      background-color: #111;
+      color: white;
     }
 
     header {
@@ -27,30 +27,18 @@
       justify-content: space-between;
       align-items: center;
       padding: 12px 16px;
-      background-color: white;
-      border-bottom: 1px solid #ccc;
-      transition: opacity 0.4s ease;
-      z-index: 1102;
-      opacity: 1;
+      background-color: white;  /* White header background */
       color: black;
-      height: 56px; /* fixed header height */
-    }
-
-    /* Menu Icon */
-    .menu-btn,
-    .menu-btn::before,
-    .menu-btn::after {
-      background-color: black;
+      z-index: 1200;
     }
 
     .menu-btn {
-      width: 18px;
+      width: 18px;   /* smaller menu icon */
       height: 2px;
+      background-color: black;
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      top: 2px;
-      z-index: 1103;
     }
 
     .menu-btn::before,
@@ -58,18 +46,17 @@
       content: "";
       width: 18px;
       height: 2px;
+      background-color: black;
       position: absolute;
       transition: all 0.3s ease-in-out;
     }
 
     .menu-btn::before {
       top: -8px;
-      background-color: black;
     }
 
     .menu-btn::after {
       top: 8px;
-      background-color: black;
     }
 
     .menu-btn.open {
@@ -86,96 +73,102 @@
       top: 0;
     }
 
-    /* Logo container: centered horizontally and vertically aligned */
     .logo-container {
       position: absolute;
       left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
+      transform: translateX(-50%);
+      top: 8px;
       cursor: pointer;
-      transition: opacity 0.4s ease;
-      z-index: 1103;
-      opacity: 1;
+      z-index: 1300;
     }
 
     .logo {
       height: 34px;
-      filter: none;
+      filter: none; /* no filter, black logo */
     }
 
-    /* Cart icon container */
     .cart-icon-container {
       position: relative;
-      display: flex;
-      align-items: center;
-      top: 0;
-      z-index: 1103;
-      opacity: 1;
-      transition: opacity 0.4s ease;
+      cursor: pointer;
+      z-index: 1300;
     }
 
     .cart-icon {
-      height: 22px;
-      cursor: pointer;
-      filter: none;
+      height: 18px;  /* smaller */
+      filter: invert(0%); /* black */
+      position: relative;
+      top: -1px; /* raise to align with logo */
     }
 
     .cart-count {
       position: absolute;
       top: -6px;
       right: -6px;
-      background-color: black;
-      color: white;
+      background-color: white;
+      color: #111;
       border-radius: 50%;
       font-size: 10px;
       padding: 2px 5px;
       line-height: 1;
       min-width: 16px;
       text-align: center;
-      display: none;
-    }
-
-    /* Sidebar styles */
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: -100%;
-      width: 100vw;
-      height: 100vh;
-      background-color: #b0b0b0; /* solid gray */
-      transition: left 0.5s ease-in-out;
-      z-index: 1100;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: black;
-      font-size: 24px;
-      user-select: none;
-    }
-
-    .sidebar.open {
-      left: 0;
+      display: none; /* hidden initially */
     }
 
     /* Image box below header */
     .image-box {
       width: 100vw;
       max-width: 100vw;
-      height: calc(70vh); /* around 70% viewport height */
-      margin-top: 72px; /* pushes image down a bit more from header */
+      height: 70vh;
+      margin-top: 0; /* flush with header */
       overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
+      background-color: #222; /* dark background behind image */
     }
 
     .image-box img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      user-select: none;
     }
 
+    /* Sidebar */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100vw;
+      height: 100vh;
+      background-color: white; /* white background */
+      font-family: 'Cardo', serif;
+      transition: left 0.5s ease-in-out;
+      z-index: 1100;
+      color: black;
+      font-size: 24px;
+      user-select: none;
+      padding: 40px 20px 20px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .sidebar.open {
+      left: 0;
+    }
+
+    /* Sidebar close button */
+    .sidebar-close-btn {
+      align-self: flex-end;
+      font-size: 30px;
+      font-weight: bold;
+      cursor: pointer;
+      user-select: none;
+      margin-bottom: 20px;
+    }
+
+    /* Show header only on mobile */
     @media (min-width: 768px) {
       header {
         display: none;
@@ -186,17 +179,16 @@
 <body>
 
   <header>
-    <!-- Menu Icon -->
-    <div id="menuToggle" class="menu-btn" aria-label="Toggle menu" role="button" tabindex="0"></div>
+    <!-- Menu Icon (Left) -->
+    <div id="menuToggle" class="menu-btn"></div>
 
     <!-- Centered Logo -->
-    <div id="logo" class="logo-container" tabindex="0" role="link" aria-label="Reload page">
-      <!-- Black logo version -->
+    <div class="logo-container" id="logoContainer" title="Go to main page">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-black.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     </div>
 
-    <!-- Shopping Bag Icon -->
-    <div class="cart-icon-container">
+    <!-- Shopping Bag Icon (Right) -->
+    <div class="cart-icon-container" title="View Cart">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
       <div class="cart-count" id="cartCount">0</div>
     </div>
@@ -204,74 +196,53 @@
 
   <!-- Image box below header -->
   <div class="image-box">
-    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" alt="Sample" />
+    <!-- Sample placeholder image -->
+    <img src="https://via.placeholder.com/1200x700?text=Sample+Photo" alt="Sample Photo" />
   </div>
 
   <!-- Sidebar -->
-  <div id="sidebar" class="sidebar" aria-hidden="true">
-    Menu Content Here
-  </div>
+  <nav id="sidebar" class="sidebar" aria-hidden="true">
+    <div class="sidebar-close-btn" id="sidebarCloseBtn" aria-label="Close sidebar">&times;</div>
+    <div>
+      <!-- Sidebar content here -->
+      <p>Sidebar content goes here.</p>
+    </div>
+  </nav>
 
   <script>
     const menuToggle = document.getElementById('menuToggle');
     const sidebar = document.getElementById('sidebar');
-    const header = document.querySelector('header');
-    const logo = document.getElementById('logo');
-    const cartIconContainer = document.querySelector('.cart-icon-container');
+    const sidebarCloseBtn = document.getElementById('sidebarCloseBtn');
+    const logoContainer = document.getElementById('logoContainer');
+    const cartCountEl = document.getElementById('cartCount');
 
-    // Toggle sidebar open/close
+    // Menu toggle open/close sidebar
     menuToggle.addEventListener('click', () => {
-      const isOpen = menuToggle.classList.toggle('open');
-      sidebar.classList.toggle('open', isOpen);
-      // Logos remain visible & clickable on top when sidebar is open
-      header.style.opacity = '1';
-      logo.style.opacity = '1';
-      cartIconContainer.style.opacity = '1';
+      const isOpen = sidebar.classList.toggle('open');
+      menuToggle.classList.toggle('open', isOpen);
       sidebar.setAttribute('aria-hidden', !isOpen);
-      menuToggle.setAttribute('aria-expanded', isOpen);
     });
 
-    // Smooth reload on clicking the logo
-    function smoothReload() {
-      header.classList.add('fade-out');
-      logo.classList.add('fade-out');
-      cartIconContainer.classList.add('fade-out');
-      header.addEventListener('transitionend', () => {
-        window.location.reload();
-      }, { once: true });
-    }
-
-    logo.addEventListener('click', smoothReload);
-    logo.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        smoothReload();
-      }
+    // Close sidebar button
+    sidebarCloseBtn.addEventListener('click', () => {
+      sidebar.classList.remove('open');
+      menuToggle.classList.remove('open');
+      sidebar.setAttribute('aria-hidden', 'true');
     });
 
-    // On page load: fade logos in smoothly
-    window.addEventListener('load', () => {
-      header.style.opacity = '0';
-      logo.style.opacity = '0';
-      cartIconContainer.style.opacity = '0';
+    // Clicking Matt Scianna logo reloads current page smoothly
+    logoContainer.addEventListener('click', () => {
+      // Simple smooth reload without flicker:
+      // Fade out logos slightly
+      document.querySelector('header').style.transition = 'opacity 0.3s ease';
+      document.querySelector('header').style.opacity = '0.6';
 
       setTimeout(() => {
-        header.style.transition = 'opacity 0.4s ease';
-        logo.style.transition = 'opacity 0.4s ease';
-        cartIconContainer.style.transition = 'opacity 0.4s ease';
-
-        header.style.opacity = '1';
-        logo.style.opacity = '1';
-        cartIconContainer.style.opacity = '1';
-
-        header.classList.remove('fade-out');
-        logo.classList.remove('fade-out');
-        cartIconContainer.classList.remove('fade-out');
-      }, 50);
+        window.location.href = '/website/'; // Reload to main page
+      }, 300);
     });
 
-    // Cart count element
-    const cartCountEl = document.getElementById('cartCount');
+    // Cart count example (start hidden)
     function updateCartCount(count) {
       cartCountEl.textContent = count;
       cartCountEl.style.display = count > 0 ? 'inline-block' : 'none';
