--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
 
     html, body {
       height: 100%;
-      overflow: hidden; /* Prevent scrolling vertically and horizontally */
+      overflow-x: hidden; /* prevent horizontal scrolling */
       background-color: white;
       font-family: Arial, sans-serif;
     }
@@ -25,6 +25,9 @@
     body {
       color: black;
       user-select: none;
+      overflow-y: auto; /* enable vertical scroll */
+      max-height: 100vh;
+      overscroll-behavior-y: contain; /* prevent pull-to-refresh */
     }
 
     header {
@@ -51,7 +54,7 @@
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      margin-top: 4px; /* slightly lower */
+      margin-top: 0; /* raised higher */
     }
 
     .menu-btn::before,
@@ -104,12 +107,12 @@
       position: relative;
       cursor: pointer;
       z-index: 1300;
-      margin-top: 6px; /* lowered to align with menu icon */
+      margin-top: 0; /* raised higher to align with menu */
       margin-right: 4px;
     }
 
     .cart-icon {
-      height: 22px; /* bigger */
+      height: 26px; /* bigger */
       filter: invert(0%);
       position: relative;
       top: 0;
@@ -137,7 +140,7 @@
       top: 56px; /* right below header */
       left: 0;
       width: 100vw;
-      height: calc(100vh - 56px);
+      height: 60vh; /* shorter height */
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -161,7 +164,7 @@
       height: 100vh;
       background-color: white; /* white background */
       font-family: 'Cardo', serif;
-      transition: left 0.5s ease-in-out;
+      transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
       z-index: 1100;
       color: black;
       font-size: 24px;
